--- a/code.html
+++ b/code.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="style.css">
 <title>Income and Expense Tracker</title>
 </head>
 <body>
@@ -35,6 +35,6 @@
         <button onclick="clearHistory()">Clear History</button>
     </div>
 </div>
-<script src="./script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
