--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <title>Income and Expense Tracker</title>
 </head>
 <body>
-    <nav><h1><<ul class="sidebar">
+    <nav>
+        <h1>
+            <<ul class="sidebar">
             <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
             <li><a href="https://byteblaster-teams.netlify.app/">OUR TEAM</a></li>
-        </ul>/h1>
-        
+        </ul>
+        </h1>
         <ul>
             <li class="Logo"><a href="#">ByteBlaster Corporation</a></li>
             <li class="hideOnmobile"><a href="https://byteblaster-teams.netlify.app/">OUR TEAM</a></li>
