--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
             <button onclick="clearHistory()">Clear History</button>
         </div>
     </div>
+    <script>
+        function showSidebar() {
+            document.querySelector('.sidebar').style.display = 'flex';
+        }
+
+        function hideSidebar() {
+            document.querySelector('.sidebar').style.display = 'none';
+        }
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
